# k8s-home-cluster

./: .envrc  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .sops.yaml  .sourceignore  LICENSE  README.md  Taskfile.yaml  Taskfile.yml  ansible.cfg  configure  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: invalid-template.yaml  lint.yaml  support.yaml
.taskfiles/: AnsibleTasks.yaml  ClusterTasks.yaml  PrecommitTasks.yaml  SopsTasks.yaml
cluster/apps/: kustomization.yaml
cluster/apps/default/: kustomization.yaml  namespace.yaml
cluster/apps/flux-system/: kustomization.yaml  namespace.yaml
cluster/apps/kube-system/: kustomization.yaml  namespace.yaml
cluster/apps/networking/: kustomization.yaml  namespace.yaml
cluster/apps/system-upgrade/: kustomization.yaml  namespace.yaml
cluster/bootstrap/: kustomization.yaml
cluster/charts/: emberstack.yaml  jetstack.yaml  metallb.yaml  metrics-server.yaml  weaveworks-kured.yaml
cluster/config/: cluster-secrets.sops.yaml  cluster-settings.yaml
cluster/core/: kustomization.yaml
cluster/core/cluster-issuers/: default-tls-crt.yaml  letsencrypt-production.yaml  letsencrypt-staging.yaml  secret.sops.yaml  wildcard-crt.yaml
cluster/crds/: kustomization.yaml
cluster/crds/traefik/: crds.yaml
cluster/flux/: apps.yaml  charts.yaml  config.yaml  core.yaml  crds.yaml
provision/ansible/: requirements.yaml
tmpl/: .sops.yaml
tmpl/ansible/: kube-vip.yaml
tmpl/cluster/: cluster-settings.yaml  flux-cluster.yaml  kube-vip-daemonset.yaml
(+70 files in other folders)
